lustre/ofd/ofd_dev.c
@@ -1642,18 +1642,12 @@ static int ofd_create_hdl(struct tgt_session_info *tsi)
 		 * (possibly filling the OST), only precreate the last batch.
 		 * LFSCK will eventually clean up any orphans. LU-14 */
 		if (diff > 5 * OST_MAX_PRECREATE) {
+			/* Message below is checked in conf-sanity test_122b */
+			LCONSOLE_WARN("%s: precreate FID "DOSTID" is over %lld higher than LAST_ID "DOSTID", only precreating the last %u objects. OST replaced or reformatted?\n",
+				      ofd_name(ofd), POSTID(&oa->o_oi), diff,
+				      POSTID(&oseq->os_oi),
+				      OST_MAX_PRECREATE / 2);
 			diff = OST_MAX_PRECREATE / 2;
-			LCONSOLE_WARN("%s: Too many FIDs to precreate "
-				      "OST replaced or reformatted: "
-				      "LFSCK will clean up",
-				      ofd_name(ofd));
-
-			CDEBUG(D_HA, "%s: precreate FID "DOSTID" is over "
-			       "%u larger than the LAST_ID "DOSTID", only "
-			       "precreating the last %lld objects.\n",
-			       ofd_name(ofd), POSTID(&oa->o_oi),
-			       5 * OST_MAX_PRECREATE,
-			       POSTID(&oseq->os_oi), diff);
 			ofd_seq_last_oid_set(oseq, ostid_id(&oa->o_oi) - diff);
 		}
 
